--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>Poké-Pak Sim</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/svg' href='/favicon.svg'>
 	<link rel='stylesheet' href='/mainstyle.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
